# cnc-availability

./: .dockerignore  .gitignore  Dockerfile  README.md  data.json  deploy.sh  docker-compose-local.yml  docker-compose.yml  dummy.py  main.py  play.ipynb  pyproject.toml  rem.py  requirements.txt  setup-local.sh  test.py
cogs/: ipc.py
cogs/commands/: __init__.py  admin.py  ecu.py  utils.py  views.py
cogs/task/: __init__.py  burden.py  stats.py  utils.py
cogs/utility/: __init__.py
essentials/: data.py  mock_time.py  models.py  time.py  utils.py  views.py
prisma/: schema.prisma
prisma/migrations/20230220194149_added/: migration.sql
prisma/migrations/20230220195934_init/: migration.sql
prisma/migrations/20230222071044_message_ids/: migration.sql
prisma/migrations/20230316135026_settings/: migration.sql
prisma/migrations/20230401082452_avail/: migration.sql
prisma/migrations/20230612155432_player/: migration.sql
prisma/migrations/20230612155522_game/: migration.sql
prisma/migrations/20230614151215_fw/: migration.sql
prisma/migrations/20230615081010_roles/: migration.sql
prisma/migrations/20230624165357_tasks_control/: migration.sql
prisma/migrations/20230627132654_playoffs/: migration.sql
prisma/migrations/20230803083323_avail_submit/: migration.sql
prisma/migrations/20230820164104_update/: migration.sql
utils/: data.py  gspread.py
